5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1758_1580.log
== SUBMITION (2019-05-28 11:35:58) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n))
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n))
		maior=i
		
print(falt)
print(apro)
print(rep)
print(round(2,soma/size(n))
print(a[maior])
-- EXECUTION TIME:
0.134274
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 11
    while(i<size(n))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:36:00) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n))
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n))
		maior=i
		
print(falt)
print(apro)
print(rep)
print(round(2,soma/size(n))
print(a[maior])
-- ERROR:
File "XXXX", line 11
    while(i<size(n))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:36:22) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n))
		maior=i
		
print(falt)
print(apro)
print(rep)
print(round(2,soma/size(n))
print(a[maior])
-- ERROR:
File "XXXX", line 20
    elif(n[i]==max(n))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:36:30) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
		
print(falt)
print(apro)
print(rep)
print(round(2,soma/size(n))
print(a[maior])
-- ERROR:
File "XXXX", line 27
    print(a[maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:36:45) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
		
print(falt)
print(apro)
print(rep)
print(round(2,soma/size(n))
print(a[:maior])
-- ERROR:
File "XXXX", line 27
    print(a[:maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:37:37) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
nerd= a[maior]	
print(falt)
print(apro)
print(rep)
print(round(2,soma/size(n))
print(nerd)
-- EXECUTION TIME:
0.160393
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 27
    print(nerd)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:37:38) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
nerd= a[maior]	
print(falt)
print(apro)
print(rep)
print(round(2,soma/size(n))
print(nerd)
-- ERROR:
File "XXXX", line 27
    print(nerd)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:39:56) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1
nerd= a[maior]	
print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(nerd)
-- EXECUTION TIME:
0.148872
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 28
    print(nerd)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:39:57) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1
nerd= a[maior]	
print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(nerd)
-- ERROR:
File "XXXX", line 28
    print(nerd)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:40:21) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(a[maior])
-- EXECUTION TIME:
0.126335
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 28
    print(a[maior])
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:40:22) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(a[maior])
-- ERROR:
File "XXXX", line 28
    print(a[maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:40:29) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(a[:maior])
-- EXECUTION TIME:
0.14557
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 28
    print(a[:maior])
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:40:30) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(a[:maior])
-- ERROR:
File "XXXX", line 28
    print(a[:maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:40:34) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(a[0:maior])
-- ERROR:
File "XXXX", line 28
    print(a[0:maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:40:35) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(a[0:maior])
-- ERROR:
File "XXXX", line 28
    print(a[0:maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:41:32) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(a[maior])
-- EXECUTION TIME:
0.141466
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 28
    print(a[maior])
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:41:32) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep)
print(a[maior])
-- ERROR:
File "XXXX", line 28
    print(a[maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:06) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep))
print(a[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:42:10) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep))
print(a[maior])
-- EXECUTION TIME:
0.504249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 27, in <module>
    print(round(2,soma/apro+rep))
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:42:13) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep))
print(a[maior])
-- EXECUTION TIME:
0.522694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 27, in <module>
    print(round(2,soma/apro+rep))
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:13) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/apro+rep))
print(a[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:42:20) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/(apro+rep))
print(a[maior])
-- EXECUTION TIME:
0.219099
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 28
    print(a[maior])
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:27) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/(apro+rep))
print(a[maior])
-- ERROR:
File "XXXX", line 28
    print(a[maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:42:40) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/(apro+rep)))
print(a[maior])
-- EXECUTION TIME:
0.363747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 27, in <module>
    print(round(2,soma/(apro+rep)))
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:41) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/(apro+rep)))
print(a[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:43:39) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,(soma/(apro+rep))))
print(a[maior])
-- EXECUTION TIME:
0.61991
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 27, in <module>
    print(round(2,(soma/(apro+rep))))
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:43:40) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i]!= -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,(soma/(apro+rep))))
print(a[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:44:30) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/(apro+rep)))
print(a[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:49:05) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/size(a)-falt)
print(a[maior])
-- ERROR:
File "XXXX", line 28
    print(a[maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:49:14) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/size(a)-falt))
print(a[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:51:36) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/size(a)-falt))
print(a[maior])

print(size(a)-falt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:54:28) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(2,soma/size(a)-falt))
print(a[maior])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:25) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/size(a)-falt,2))
print(a[maior])


-- EXECUTION TIME:
0.548052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 28, in <module>
    print(a[maior])
NameError: name 'maior' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:42) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/size(a)-falt),2)
print(a[maior])


-- EXECUTION TIME:
0.591463
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 28, in <module>
    print(a[maior])
NameError: name 'maior' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:55:44) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	elif(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/size(a)-falt),2)
print(a[maior])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:57:02) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/size(a)-falt),2)
print(a[maior])


-- EXECUTION TIME:
0.368251
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
1.0 2
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
-4.0 2
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.0 2
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:04) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/size(a)-falt),2)
print(a[maior])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:57:35) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/size(a)-falt),2)
print(a[maior])


-- EXECUTION TIME:
0.403509
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
1.0 2
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
-4.0 2
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.0 2
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:36) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/size(a)-falt),2)
print(a[maior])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:58:02) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/size(a)-falt),2)
print(a[maior])


-- EXECUTION TIME:
0.407443
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
1.0 2
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
-4.0 2
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.0 2
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:58:27) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/(size(a)-falt),2)
print(a[maior])


-- EXECUTION TIME:
0.267552
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 28
    print(a[maior])
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:29) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/(size(a)-falt),2)
print(a[maior])


-- ERROR:
File "XXXX", line 28
    print(a[maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:36) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/(size(a)-falt)),2)
print(a[maior])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:58:39) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/(size(a)-falt)),2)
print(a[maior])


-- EXECUTION TIME:
0.615607
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0 2
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.0 2
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.0 2
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:58:42) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/(size(a)-falt)),2)
print(a[maior])


-- EXECUTION TIME:
0.554298
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0 2
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.0 2
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.0 2
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:58:45) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1

print(falt)
print(apro)
print(rep)
print(round(soma/(size(a)-falt)),2)
print(a[maior])


-- EXECUTION TIME:
0.517051
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0 2
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.0 2
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.0 2
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:59:25) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1
s=soma/(size(a)-falt)
print(falt)
print(apro)
print(rep)
print(round(s,2))
print(a[maior])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:59:28) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1
s=soma/(size(a)-falt)
print(falt)
print(apro)
print(rep)
print(round(s,2))
print(a[maior])


-- EXECUTION TIME:
0.45064
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:59:28) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1
s=soma/(size(a)-falt)
print(falt)
print(apro)
print(rep)
print(round(s,2))
print(a[maior])


-- EXECUTION TIME:
0.115448
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1758/1580/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:00:10) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1
s=soma/(size(a)-falt)
print(falt)
print(apro)
print(rep)
print(round(s,2))
print(a[maior])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:00:41) 
-- CODE:
from numpy import*

n=array(eval(input("entre como vetor: ")))
a=array(eval(input("entre como vetornome: ")))

i=0
falt=0
apro=0
rep=0
soma=0
while(i<size(n)):
	if(n[i]==-1):
		falt=falt+1
	elif(n[i]>=6):
		apro=apro+1
	elif(n[i]<6 and n[i]!= -1):
		rep=rep+1
	if(n[i] != -1):
		soma=soma+ n[i]
	if(n[i]==max(n)):
		maior=i
	i=i+1
s=soma/(size(a)-falt)
print(falt)
print(apro)
print(rep)
print(round(s,2))
print(a[maior])


-- EXECUTION TIME:
0.349678
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
